...
    private func configureView() {
        self.view.backgroundColor = .white
    }
    
    private func configureNavigationController() {
        self.navigationItem.searchController = self.searchController
        self.navigationItem.title = "Search App"
        self.navigationController?.navigationBar.prefersLargeTitles = true
    }
    
    private func configureSearchController() {
        self.searchController.hidesNavigationBarDuringPresentation = true
        self.searchController.searchBar.delegate = self
...
